--- a/code/dissertation/pom.xml
+++ b/code/dissertation/pom.xml
@@ -1,9 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.dariosimonetti.dissertation.agent</groupId>
-	<artifactId>agent</artifactId>
+	<groupId>com.dariosimonetti.dissertation</groupId>
+	<artifactId>dissertation</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+
+	<modules>
+		<module>agent</module>
+		<module>executor</module>
+	</modules>
+
 	<build>
 		<finalName>agent</finalName>
 		<plugins>
@@ -128,12 +134,12 @@
             <artifactId>akka-actor_2.11</artifactId>
             <version>2.3.6</version>
         </dependency>
-        <dependency>
-            <groupId>com.typesafe.atmos</groupId>
-            <artifactId>trace-akka-2.2.0_2.11.0-M3</artifactId>
-            <version>1.3.1</version>
-        </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>com.typesafe.akka</groupId>
+			<artifactId>akka-stream-experimental_2.11</artifactId>
+			<version>1.0</version>
+		</dependency>
+	</dependencies>
     <repositories>
         <repository>
             <id>typesafe-releases</id>
