--- a/code/agent-test/pom.xml
+++ b/code/agent-test/pom.xml
@@ -19,7 +19,9 @@
                 </configuration>
             </plugin>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-assembly-plugin</artifactId>
+				<version>2.6</version>
 				<configuration>
 					<fileSets>
 						<fileSet>
@@ -54,7 +56,7 @@
 	</build>
 	<dependencies>
 		<dependency>
-			<groupId>com.dariosimonetti.dissertation.agent</groupId>
+			<groupId>com.dariosimonetti.dissertation</groupId>
 			<artifactId>agent</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
