--- a/code/agent-annotations/pom.xml
+++ b/code/agent-annotations/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>tech.dario.dissertation</groupId>
-    <artifactId>agent-test</artifactId>
+    <artifactId>agent-annotations</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <build>
@@ -17,22 +17,10 @@
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
+                    <testSource>1.8</testSource>
+                    <testTarget>1.8</testTarget>
                 </configuration>
             </plugin>
         </plugins>
     </build>
-    <dependencies>
-        <dependency>
-            <groupId>tech.dario.dissertation</groupId>
-            <artifactId>agent-annotations</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-
-        <!-- Logging -->
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.7.21</version>
-        </dependency>
-    </dependencies>
 </project>
