--- a/code/time-reporter-akka/pom.xml
+++ b/code/time-reporter-akka/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>tech.dario.dissertation</groupId>
-    <artifactId>agent-test</artifactId>
+    <artifactId>time-reporter-akka</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <build>
@@ -17,6 +17,8 @@
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
+                    <testSource>1.8</testSource>
+                    <testTarget>1.8</testTarget>
                 </configuration>
             </plugin>
         </plugins>
@@ -24,7 +26,7 @@
     <dependencies>
         <dependency>
             <groupId>tech.dario.dissertation</groupId>
-            <artifactId>agent-annotations</artifactId>
+            <artifactId>time-reporter-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
