--- a/code/time-complexity-analyser/pom.xml
+++ b/code/time-complexity-analyser/pom.xml
@@ -5,12 +5,45 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>tech.dario.dissertation</groupId>
-    <artifactId>time-complexity-analyser</artifactId>
+    <artifactId>time-complexity-analyser-sdk</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <build>
         <finalName>time-complexity-analyser</finalName>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <inherited>false</inherited>
+                    <archive>
+                        <manifestFile>src/main/resources/MANIFEST.MF</manifestFile>
+                    </archive>
+                    <fileSets>
+                        <fileSet>
+                            <outputDirectory>/</outputDirectory>
+                            <useDefaultExcludes>true</useDefaultExcludes>
+                            <includes>
+                                <include>src/main/**</include>
+                            </includes>
+                        </fileSet>
+                    </fileSets>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <finalName>time-complexity-analyser-fat</finalName>
+                    <appendAssemblyId>false</appendAssemblyId>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -22,44 +55,22 @@
                     <testTarget>1.7</testTarget>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.6</version>
-                <configuration>
-                    <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
-                    <finalName>time-complexity-analyser-fat</finalName>
-                    <appendAssemblyId>false</appendAssemblyId>
-                    <archive>
-                        <manifest>
-                            <addClasspath>true</addClasspath>
-                        </manifest>
-                        <manifestFile>src/main/resources/MANIFEST.MF</manifestFile>
-                    </archive>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>assemble-all</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
         </plugins>
     </build>
     <dependencies>
         <dependency>
             <groupId>tech.dario.dissertation</groupId>
-            <artifactId>agent-annotations</artifactId>
+            <artifactId>time-complexity-analysis-sdk</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>tech.dario.dissertation</groupId>
-            <artifactId>time-reporter-akka</artifactId>
+            <artifactId>test-algorithm</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>tech.dario.dissertation</groupId>
+            <artifactId>time-recorder-akka</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
