Changed time-recorder logic to not have SLFJ-style injection

--- a/code/time-complexity-analysis-sdk/pom.xml
+++ b/code/time-complexity-analysis-sdk/pom.xml
@@ -26,7 +26,7 @@
     <dependencies>
         <dependency>
             <groupId>tech.dario.dissertation</groupId>
-            <artifactId>agent-annotations</artifactId>
+            <artifactId>time-recorder-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
