--- a/code/time-recorder-akka/pom.xml
+++ b/code/time-recorder-akka/pom.xml
@@ -74,6 +74,12 @@
             <artifactId>akka-slf4j_2.11</artifactId>
             <version>2.4.6</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>3.20.0-GA</version>
+        </dependency>
     </dependencies>
     <repositories>
         <repository>
