--- a/code/time-recorder-akka/pom.xml
+++ b/code/time-recorder-akka/pom.xml
@@ -80,6 +80,17 @@
             <artifactId>javassist</artifactId>
             <version>3.20.0-GA</version>
         </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
+        <dependency>
+            <groupId>org.scalatest</groupId>
+            <artifactId>scalatest_2.11</artifactId>
+            <version>3.0.0</version>
+        </dependency>
     </dependencies>
     <repositories>
         <repository>
