--- a/code/time-complexity-analysis-sdk/pom.xml
+++ b/code/time-complexity-analysis-sdk/pom.xml
@@ -13,12 +13,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.5.1</version>
+                <version>3.6.0</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                    <testSource>1.8</testSource>
-                    <testTarget>1.8</testTarget>
+                    <source>9</source>
+                    <target>9</target>
+                    <testSource>9</testSource>
+                    <testTarget>9</testTarget>
                 </configuration>
             </plugin>
         </plugins>
@@ -34,6 +34,13 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-math3</artifactId>
             <version>3.6.1</version>
+        </dependency>
+
+        <!-- Charts -->
+        <dependency>
+            <groupId>jfree</groupId>
+            <artifactId>jfreechart</artifactId>
+            <version>1.0.13</version>
         </dependency>
 
         <!-- Logging -->
