--- a/code/time-recorder-api/pom.xml
+++ b/code/time-recorder-api/pom.xml
@@ -4,29 +4,52 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>tech.dario.dissertation</groupId>
+    <groupId>tech.dario.timecomplexityanalysis</groupId>
     <artifactId>time-recorder-api</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.6.0</version>
+                <version>3.6.1</version>
                 <configuration>
-                    <source>9</source>
-                    <target>9</target>
-                    <testSource>9</testSource>
-                    <testTarget>9</testTarget>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <testSource>1.8</testSource>
+                    <testTarget>1.8</testTarget>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>1.8</version>
+                <executions>
+                    <execution>
+                        <phase>process-classes</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <tasks>
+                        <echo>Removing time-recorder-api's dummy StaticTimeRecorderBinder</echo>
+                        <delete dir="target/classes/tech/dario/timecomplexityanalysis/timerecorder/impl"/>
+                    </tasks>
                 </configuration>
             </plugin>
         </plugins>
     </build>
     <dependencies>
         <dependency>
-            <groupId>tech.dario.dissertation</groupId>
-            <artifactId>agent-annotations</artifactId>
+            <groupId>tech.dario.timecomplexityanalysis</groupId>
+            <artifactId>annotations</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
@@ -40,7 +63,7 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.7.21</version>
+            <version>1.7.25</version>
         </dependency>
 
         <!-- Test -->
