Restructure time-recorder-akka
Restore `SLF4J`-like logic to inject `TimeRecorderFactory` statically.

Also:
 - Move from Java 9 to Java 8
 - Change base package from `tech.dario.dissertation.timerecorder.akka`
   to `tech.dario.timecomplexityanalysis.timerecorder.impl.akka`
 - Bump dependencies

--- a/code/time-recorder-akka/pom.xml
+++ b/code/time-recorder-akka/pom.xml
@@ -4,16 +4,20 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>tech.dario.dissertation</groupId>
+    <groupId>tech.dario.timecomplexityanalysis</groupId>
     <artifactId>time-recorder-akka</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.6.0</version>
+                <version>3.6.1</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
@@ -52,7 +56,7 @@
     </build>
     <dependencies>
         <dependency>
-            <groupId>tech.dario.dissertation</groupId>
+            <groupId>tech.dario.timecomplexityanalysis</groupId>
             <artifactId>time-recorder-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
@@ -61,19 +65,27 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.7.21</version>
+            <version>1.7.25</version>
         </dependency>
 
         <!-- Akka -->
         <dependency>
             <groupId>com.typesafe.akka</groupId>
             <artifactId>akka-actor_2.12</artifactId>
-            <version>2.4.14</version>
+            <version>2.4.17</version>
         </dependency>
         <dependency>
             <groupId>com.typesafe.akka</groupId>
             <artifactId>akka-slf4j_2.12</artifactId>
-            <version>2.4.14</version>
+            <version>2.4.17</version>
+        </dependency>
+
+        <!-- Test -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
     <repositories>
