--- a/code/time-recorder-akka/src/main/resources/reference.conf
+++ b/code/time-recorder-akka/src/main/resources/reference.conf
@@ -18,7 +18,7 @@
 #    guardian-supervisor-strategy = "akka.actor.DefaultSupervisorStrategy"
 #
 #    default-mailbox {
-#      mailbox-type = "tech.dario.dissertation.timerecorder.akka.PriorityMailbox"
+#      mailbox-type = "tech.dario.timecomplexityanalysis.timerecorder.impl.akka.PriorityMailbox"
 #    }
 #
 #    default-dispatcher {
