--- a/code/time-complexity-analysis-sdk/pom.xml
+++ b/code/time-complexity-analysis-sdk/pom.xml
@@ -4,28 +4,32 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>tech.dario.dissertation</groupId>
+    <groupId>tech.dario.timecomplexityanalysis</groupId>
     <artifactId>time-complexity-analysis-sdk</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.6.0</version>
+                <version>3.6.1</version>
                 <configuration>
-                    <source>9</source>
-                    <target>9</target>
-                    <testSource>9</testSource>
-                    <testTarget>9</testTarget>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <testSource>1.8</testSource>
+                    <testTarget>1.8</testTarget>
                 </configuration>
             </plugin>
         </plugins>
     </build>
     <dependencies>
         <dependency>
-            <groupId>tech.dario.dissertation</groupId>
+            <groupId>tech.dario.timecomplexityanalysis</groupId>
             <artifactId>time-recorder-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
@@ -38,16 +42,16 @@
 
         <!-- Charts -->
         <dependency>
-            <groupId>jfree</groupId>
+            <groupId>org.jfree</groupId>
             <artifactId>jfreechart</artifactId>
-            <version>1.0.13</version>
+            <version>1.0.19</version>
         </dependency>
 
         <!-- Logging -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.7.21</version>
+            <version>1.7.25</version>
         </dependency>
 
         <!-- Test -->
