--- a/code/time-recorder-akka/pom.xml
+++ b/code/time-recorder-akka/pom.xml
@@ -72,12 +72,12 @@
         <dependency>
             <groupId>com.typesafe.akka</groupId>
             <artifactId>akka-actor_2.12</artifactId>
-            <version>2.4.17</version>
+            <version>2.5.2</version>
         </dependency>
         <dependency>
             <groupId>com.typesafe.akka</groupId>
             <artifactId>akka-slf4j_2.12</artifactId>
-            <version>2.4.17</version>
+            <version>2.5.2</version>
         </dependency>
 
         <!-- Test -->
@@ -86,6 +86,17 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.scalatest</groupId>
+            <artifactId>scalatest_2.12</artifactId>
+            <version>3.0.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-testkit_2.12</artifactId>
+            <version>2.5.2</version>
         </dependency>
     </dependencies>
     <repositories>
