--- a/code/time-recorder-akka/pom.xml
+++ b/code/time-recorder-akka/pom.xml
@@ -25,6 +25,8 @@
                     <testTarget>1.8</testTarget>
                 </configuration>
             </plugin>
+
+            <!-- For Scala code -->
             <plugin>
                 <groupId>org.scala-tools</groupId>
                 <artifactId>maven-scala-plugin</artifactId>
@@ -51,6 +53,26 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+
+            <!-- For Scala tests -->
+            <plugin>
+              <groupId>org.scalatest</groupId>
+              <artifactId>scalatest-maven-plugin</artifactId>
+              <version>1.0</version>
+              <configuration>
+                <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
+                <junitxml>.</junitxml>
+                <filereports>WDF TestSuite.txt</filereports>
+              </configuration>
+              <executions>
+                <execution>
+                  <id>test</id>
+                  <goals>
+                    <goal>test</goal>
+                  </goals>
+                </execution>
+              </executions>
             </plugin>
         </plugins>
     </build>
